--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <a class="nav-link" href="program_hitung_ap260.html">ap260</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="programHitung.html">ukuran custom</a>
+          <a class="nav-link " href="index.html">ukuran custom</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
