beganti nama ling

--- a/program_hitung_ap260.html
+++ b/program_hitung_ap260.html
@@ -23,7 +23,7 @@
             aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="programHitung.html">ukuran Custom</a>
+        <a class="navbar-brand" href="index.html">ukuran Custom</a>
         <a class="navbar-brand" href="/">
             <div class="logo-image">
                 <img src="png_benawa.png" class="img-fluid" style="width: 30%">
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="program_hitung_ap260.html">ap260</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="programHitung.html" tabindex="-1" aria-disabled="true">ukuran
+                    <a class="nav-link disabled" href="index.html" tabindex="-1" aria-disabled="true">ukuran
                         custom</a>
                 </li>
             </ul>
