memperbaiki ling yang rusak

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="programHitung.html">ukuran Custom</a>
+    <a class="navbar-brand" href="index.html">ukuran Custom</a>
     <a class="navbar-brand" href="/">
       <div class="logo-image">
         <img src="png_benawa.png" class="img-fluid" style="width: 30%">
