--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand" href="index.html">ukuran Custom</a>
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" href="index.html">
       <div class="logo-image">
         <img src="png_benawa.png" class="img-fluid" style="width: 30%">
       </div>
