--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <style>
-    body {
-      background-color: grey;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
+
   <title>ukuran custom</title>
 </head>
 
@@ -82,26 +79,11 @@
     </div>
   </nav>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   <div class="container" style="padding: 100px">
     <div class="row">
       <div class="col-md-6">
         <div class="card">
-          <form action="">
+          <form action="javascript:document.location.reload()">
             <div class="card-header">
               <h3 class="text-center"><b>Menghitung jumlah barang dalam ukuran bahan</b></h3>
             </div>
@@ -122,7 +104,7 @@
                 <input type="number" class="form-control" id="panjang" required>
               </div>
               <div class="form-group">
-                <label for="panjang">lebar (cm)</label>
+                <label for="lebar">lebar (cm)</label>
                 <input type="number" class="form-control" id="lebar" required>
               </div>
             </div>
@@ -145,15 +127,44 @@
             <div class="card-body">
               <h3 id="h3"></h3>
             </div>
+
           </form>
         </div>
       </div>
 
 
     </div>
-
-    <!-- ============= -->
   </div>
+  <!-- ukuran kotak -->
+  <div class="text-center"
+    style="text-align: center; width: 100%; height: 50px; background-color:rgb(5, 71, 71); color: cadetblue ">
+    <h2>mohon <a href="javascript:location.reload(true)" class="btn btn-danger"> refresh </a> saat memprosesnya lagi
+    </h2>
+
+  </div>
+  <div id="kurungan" style="padding-top: 90px">
+    <h4 style="text-align: center" id="angka_panjang">--120 cm--</h4>
+
+    <div class="bahan" id="bahan">
+      <h4 style="transform: rotate(-90deg); text-align: center; position: absolute;
+      bottom: 350px; left: 290px; bottom: -800px" id="angka_tinggi"> 50cm
+      </h4>
+      <!-- <div class="brg" id="barang"></div> -->
+
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
 
   <script src="programHitung.js"></script>
   <!-- Optional JavaScript -->
@@ -187,9 +198,6 @@
 
       //hitung akhir
       total = bulatkan1 * bulatkan2;
-
-
-
 
       document.getElementById('h3').innerHTML = "dapat  " + total + " pcs ukuran " + panjang + " x " +
         lebar + " cm" + " di bahan ukuran " + panjang_bahan + " x " + lebar_bahan + " cm" +
@@ -225,11 +233,125 @@
     }
 
 
+    //==============ubah ukuran bahan============
+    document.getElementById("proses_horisontal").addEventListener("click", ubah_ukuran_bahan);
+
+    function ubah_ukuran_bahan() {
+
+      //setting panjang
+      panjang_bahan = document.getElementById('panjang_bahan').value;
+      satuan_panjang = "ex";
+      hasil_panjang = panjang_bahan + satuan_panjang;
+      document.getElementById("bahan").style.width = hasil_panjang;
+      //transper ke angka_panjang
+      penulisan = "--" + panjang_bahan + " cm" + "--";
+      document.getElementById('angka_panjang').innerHTML = penulisan;
+
+      //setting tinggi
+      lebar_bahan = document.getElementById("lebar_bahan").value;
+      satuan_lebar = "ex";
+      hasil_lebar = lebar_bahan + satuan_lebar;
+      document.getElementById("bahan").style.height = hasil_lebar;
+      //transfer panjang
+      penulisan2 = "--" + lebar_bahan + " cm" + "--";
+      document.getElementById('angka_tinggi').innerHTML = penulisan2;
+    }
+
+    //=================ukuran barang===============
+
+    document.getElementById("proses_horisontal").addEventListener("click", ubah_ukuran_barang);
+
+    function ubah_ukuran_barang() {
+
+      //susun barang====horisontal======  
+      var panjang_bahan = document.getElementById('panjang_bahan').value;
+      var lebar_bahan = document.getElementById('lebar_bahan').value;
+      var panjang = document.getElementById('panjang').value;
+      var lebar = document.getElementById('lebar').value;
+
+      //hitung ke samping
+      kesamping = panjang_bahan / panjang;
+      bulatkan1 = Math.floor(kesamping);
+
+      //hitung ke bawah
+      kebawah = lebar_bahan / lebar;
+      bulatkan2 = Math.floor(kebawah);
+
+      //hitung akhir
+      total = bulatkan1 * bulatkan2;
+      var b = 1;
+      totals = total * b + 1;
 
 
+      for (i = 1; i < totals; i++) {
+        //setting panjang
+        var panjang = document.getElementById('panjang').value;
+        satuan = "ex";
+        hasil_panjang = panjang + satuan;
+
+        //seting lebar
+        var lebar = document.getElementById('lebar').value;
+        hasil_lebar = lebar + satuan;
 
 
-    //=================================================
+        var el_div = document.createElement("DIV");
+        el_div.className = 'brg';
+        el_div.style.width = hasil_panjang;
+        el_div.style.height = hasil_lebar;
+
+        var isi_teks = document.createTextNode(i);
+        el_div.appendChild(isi_teks);
+        document.getElementById("bahan").appendChild(el_div);
+      }
+
+
+    }
+    //vertike potrait===========================================================
+    document.getElementById("proses_vertikel").addEventListener("click", ubah_ukuran_barang_vertikel);
+
+    function ubah_ukuran_barang_vertikel() {
+
+      //susun barang====vertikel======  
+      var panjang_bahan = document.getElementById('panjang_bahan').value;
+      var lebar_bahan = document.getElementById('lebar_bahan').value;
+      var panjang = document.getElementById('panjang').value;
+      var lebar = document.getElementById('lebar').value;
+
+      //hitung ke samping
+      kesamping = panjang_bahan / lebar;
+      bulatkan1 = Math.floor(kesamping);
+
+      //hitung ke bawah
+      kebawah = lebar_bahan / panjang;
+      bulatkan2 = Math.floor(kebawah);
+
+      //hitung akhir
+      total = bulatkan1 * bulatkan2;
+
+
+      for (i = 1; i < totals; i++) {
+        //setting panjang
+        var panjang = document.getElementById('panjang').value;
+        satuan = "ex";
+        hasil_panjang = panjang + satuan;
+
+        //seting lebar
+        var lebar = document.getElementById('lebar').value;
+        hasil_lebar = lebar + satuan;
+
+
+        var el_div = document.createElement("DIV");
+        el_div.className = 'brg';
+        el_div.style.width = hasil_panjang;
+        el_div.style.height = hasil_lebar;
+
+        var isi_teks = document.createTextNode(i);
+        el_div.appendChild(isi_teks);
+        document.getElementById("bahan").appendChild(el_div);
+      }
+
+
+    }
   </script>
 
 
