--- a/program_hitung_ap260.html
+++ b/program_hitung_ap260.html
@@ -13,6 +13,17 @@
         body {
             background-color: grey;
         }
+
+        div.brg {
+            background-color: yellow;
+            width: 10ex;
+            height: 5ex;
+            text-align: center;
+            /* border: solid black 0.3px; */
+            float: left;
+            outline: black solid 1px;
+
+        }
     </style>
     <title>ap260</title>
 </head>
@@ -49,19 +60,6 @@
             </form>
         </div>
     </nav>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -102,7 +100,7 @@
                 <div class="card">
                     <form action="">
                         <div class="card-header" style="background-color: #8B0000">
-                            <h2 class="text-center"><b style="color: ghostwhite">review</b></h2>
+                            <h2 class="text-center"><b style="color: ghostwhite">keterangan hasil</b></h2>
                         </div>
                         <div class="card-body">
                             <h3 id="h3"></h3>
@@ -116,6 +114,35 @@
 
         <!-- ============= -->
     </div>
+    <!-- ukuran kotakknya ap260 -->
+    <div class="text-center"
+        style="text-align: center; width: 100%; height: 50px; background-color:rgb(5, 71, 71); color: cadetblue ">
+        <h2>mohon <a href="javascript:location.reload(true)" class="btn btn-danger"> refresh </a> saat memprosesnya lagi
+        </h2>
+
+    </div>
+    <div id="kurungan" style="padding-top: 90px">
+        <h4 style="text-align: center;  " id="angka_panjang">--47
+            cm--</h4>
+
+        <div class="bahan" id="bahan"
+            style="background-color: #008B8B;  width: 47ex; height: 31ex; margin-left: auto; margin-right: auto;">
+
+            <h4 style="transform: rotate(-90deg); text-align: center; position: absolute;
+                bottom: 350px; left: 560px; bottom: -200px" id="angka_tinggi"> -- 31cm --
+            </h4>
+            <!-- <div class="brg" id="barang">asdasd</div> -->
+        </div>
+    </div>
+
+    <div class="panel-footer" style="background-color: grey; widht: 100%; height:30px;"></div>
+
+
+
+
+
+    <!-- ==================fungsii=================================================== -->
+
     <script src="programHitung.js"></script>
 
     <!-- Optional JavaScript -->
@@ -151,6 +178,26 @@
 
             document.getElementById('h3').innerHTML = "dapat  " + total + " pcs ukuran " + panjang_ap260 + " x " +
                 lebar_ap260 + " cm" + " di bahan ukuran a3 kertas ap260 disusun secara horisontal (landscape)";
+
+            //susun duplikat 
+            totals = total * 1 + 1;
+
+            for (i = 1; i < totals; i++) {
+                satuan = "ex";
+                hasil_panjang = panjang_ap260 + satuan;
+                hasil_lebar = lebar_ap260 + satuan;
+
+
+                var el_div = document.createElement("DIV");
+                el_div.className = 'brg';
+                el_div.style.width = hasil_panjang;
+                el_div.style.height = hasil_lebar;
+                var isi_teks = document.createTextNode(i);
+                el_div.appendChild(isi_teks);
+                document.getElementById("bahan").appendChild(el_div);
+
+            }
+
         }
 
         document.getElementById("proses_vertikel_ap260").addEventListener("click", penjumlahan_vertikel_ap260);
@@ -174,6 +221,25 @@
 
             document.getElementById('h3').innerHTML = "dapat  " + total + " pcs ukuran " + lebar_ap260 + " x " +
                 panjang_ap260 + " cm" + " di bahan ukuran a3 kertas ap260 disusun secara vertikel (potrait)";
+
+            //susun horisontal dan duplikat
+            totals = total * 1 + 1;
+
+            for (i = 1; i < totals; i++) {
+                satuan = "ex";
+                hasil_panjang = panjang_ap260 + satuan;
+                hasil_lebar = lebar_ap260 + satuan;
+
+
+                var el_div = document.createElement("DIV");
+                el_div.className = 'brg';
+                el_div.style.width = hasil_lebar;
+                el_div.style.height = hasil_panjang;
+                var isi_teks = document.createTextNode(i);
+                el_div.appendChild(isi_teks);
+                document.getElementById("bahan").appendChild(el_div);
+
+            }
         }
     </script>
 </body>
