--- a/program_hitung_bontak.html
+++ b/program_hitung_bontak.html
@@ -13,8 +13,19 @@
         body {
             background-color: grey;
         }
+
+        div.brg {
+            background-color: yellow;
+            width: 10ex;
+            height: 5ex;
+            text-align: center;
+            /* border: solid black 0.3px; */
+            float: left;
+            outline: black solid 1px;
+
+        }
     </style>
-    <title>stiker bontak</title>
+    <title>ap260</title>
 </head>
 
 <body>
@@ -52,19 +63,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
     <div class="container" style="padding: 100px">
         <div class="row">
             <div class="col-md-6">
@@ -79,17 +77,17 @@
                         <div class="card-body">
                             <div class="form-group">
                                 <label for="panjang">panjang (cm)</label>
-                                <input type="number" class="form-control" id="panjang_bontak" required>
+                                <input type="number" class="form-control" id="panjang_ap260" required>
                             </div>
                             <div class="form-group">
                                 <label for="panjang">lebar (cm)</label>
-                                <input type="number" class="form-control" id="lebar_bontak" required>
+                                <input type="number" class="form-control" id="lebar_ap260" required>
                             </div>
                         </div>
                         <div class="text-center">
-                            <button class="btn btn-success" id="proses_horisontal_bontak" type="button">proses
+                            <button class="btn btn-success" id="proses_horisontal_ap260" type="button">proses
                                 landcape</button>
-                            <button class="btn btn-info" id="proses_vertikel_bontak" type="button">proses
+                            <button class="btn btn-info" id="proses_vertikel_ap260" type="button">proses
                                 potrait</button>
                             <button class="btn btn-warning" type="reset" id="refresh">ulang dari awal</button>
                             <div class="card-footer text-muted" style="padding-top: 10px" id="massa"></div>
@@ -101,8 +99,8 @@
             <div class="col-md-6">
                 <div class="card">
                     <form action="">
-                        <div class="card-header" style="background-color:  	#000080 ">
-                            <h2 class="text-center"><b style="color: ghostwhite">review</b></h2>
+                        <div class="card-header" style="background-color: rgb(1, 59, 40)">
+                            <h2 class="text-center"><b style="color: ghostwhite">keterangan hasil</b></h2>
                         </div>
                         <div class="card-body">
                             <h3 id="h3"></h3>
@@ -116,8 +114,37 @@
 
         <!-- ============= -->
     </div>
+    <!-- ukuran kotakknya ap260 -->
+    <div class="text-center"
+        style="text-align: center; width: 100%; height: 50px; background-color:rgb(5, 71, 71); color: cadetblue ">
+        <h2>mohon <a href="javascript:location.reload(true)" class="btn btn-danger"> refresh </a> saat memprosesnya lagi
+        </h2>
+
+    </div>
+    <div id="kurungan" style="padding-top: 90px">
+        <h4 style="text-align: center;  " id="angka_panjang">--47
+            cm--</h4>
+
+        <div class="bahan" id="bahan"
+            style="background-color: #008B8B;  width: 47ex; height: 31ex; margin-left: auto; margin-right: auto;">
+
+            <h4 style="transform: rotate(-90deg); text-align: center; position: absolute;
+                bottom: 350px; left: 560px; bottom: -200px" id="angka_tinggi"> -- 31cm --
+            </h4>
+            <!-- <div class="brg" id="barang">asdasd</div> -->
+        </div>
+    </div>
+
+    <div class="panel-footer" style="background-color: grey; widht: 100%; height:30px;"></div>
+
+
+
+
+
+    <!-- ==================fungsii=================================================== -->
 
     <script src="programHitung.js"></script>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -129,56 +156,92 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
-    <!-- //========================\ -->
     <script>
-        document.getElementById("proses_horisontal_bontak").addEventListener("click", penjumlahan_horisontal_bontak);
+        document.getElementById("proses_horisontal_ap260").addEventListener("click", penjumlahan_horisontal_ap260);
 
-        function penjumlahan_horisontal_bontak() {
-            var panjang_bahan_bontak = 47;
-            var lebar_bahan_bontak = 31;
-            var panjang_bontak = document.getElementById('panjang_bontak').value;
-            var lebar_bontak = document.getElementById('lebar_bontak').value;
+        function penjumlahan_horisontal_ap260() {
+            var panjang_bahan_ap260 = 47;
+            var lebar_bahan_ap260 = 31;
+            var panjang_ap260 = document.getElementById('panjang_ap260').value;
+            var lebar_ap260 = document.getElementById('lebar_ap260').value;
 
             //hitung ke samping
-            kesamping = panjang_bahan_bontak / panjang_bontak;
+            kesamping = panjang_bahan_ap260 / panjang_ap260;
             bulatkan1 = Math.floor(kesamping);
 
             //hitung ke bawah
-            kebawah = lebar_bahan_bontak / lebar_bontak;
+            kebawah = lebar_bahan_ap260 / lebar_ap260;
             bulatkan2 = Math.floor(kebawah);
 
             //hitung akhir
             total = bulatkan1 * bulatkan2;
 
-            document.getElementById('h3').innerHTML = "dapat  " + total + " pcs ukuran " + panjang_bontak + " x " +
-                lebar_bontak + " cm" + " di bahan ukuran a3 stiker bontak disusun secara horisontal (landscape)";
+            document.getElementById('h3').innerHTML = "dapat  " + total + " pcs ukuran " + panjang_ap260 + " x " +
+                lebar_ap260 + " cm" + " di bahan ukuran a3 stiker bontak disusun secara horisontal (landscape)";
+
+            //susun duplikat 
+            totals = total * 1 + 1;
+
+            for (i = 1; i < totals; i++) {
+                satuan = "ex";
+                hasil_panjang = panjang_ap260 + satuan;
+                hasil_lebar = lebar_ap260 + satuan;
+
+
+                var el_div = document.createElement("DIV");
+                el_div.className = 'brg';
+                el_div.style.width = hasil_panjang;
+                el_div.style.height = hasil_lebar;
+                var isi_teks = document.createTextNode(i);
+                el_div.appendChild(isi_teks);
+                document.getElementById("bahan").appendChild(el_div);
+
+            }
+
         }
 
-        document.getElementById("proses_vertikel_bontak").addEventListener("click", penjumlahan_vertikel_bontak);
+        document.getElementById("proses_vertikel_ap260").addEventListener("click", penjumlahan_vertikel_ap260);
 
-        function penjumlahan_vertikel_bontak() {
-            var panjang_bahan_bontak = 47;
-            var lebar_bahan_bontak = 31;
-            var panjang_bontak = document.getElementById('panjang_bontak').value;
-            var lebar_bontak = document.getElementById('lebar_bontak').value;
+        function penjumlahan_vertikel_ap260() {
+            var panjang_bahan_ap260 = 47;
+            var lebar_bahan_ap260 = 31;
+            var panjang_ap260 = document.getElementById('panjang_ap260').value;
+            var lebar_ap260 = document.getElementById('lebar_ap260').value;
 
             //hitung ke samping
-            kesamping = panjang_bahan_bontak / lebar_bontak;
+            kesamping = panjang_bahan_ap260 / lebar_ap260;
             bulatkan1 = Math.floor(kesamping);
 
             //hitung ke bawah
-            kebawah = lebar_bahan_bontak / panjang_bontak;
+            kebawah = lebar_bahan_ap260 / panjang_ap260;
             bulatkan2 = Math.floor(kebawah);
 
             //hitung akhir
             total = bulatkan1 * bulatkan2;
 
-            document.getElementById('h3').innerHTML = "dapat  " + total + " pcs ukuran " + lebar_bontak + " x " +
-                panjang_bontak + " cm" + " di bahan ukuran a3 stiker bontak disusun secara vertikel (potrait)";
+            document.getElementById('h3').innerHTML = "dapat  " + total + " pcs ukuran " + lebar_ap260 + " x " +
+                panjang_ap260 + " cm" + " di bahan ukuran a3 stiker bontak disusun secara vertikel (potrait)";
+
+            //susun horisontal dan duplikat
+            totals = total * 1 + 1;
+
+            for (i = 1; i < totals; i++) {
+                satuan = "ex";
+                hasil_panjang = panjang_ap260 + satuan;
+                hasil_lebar = lebar_ap260 + satuan;
+
+
+                var el_div = document.createElement("DIV");
+                el_div.className = 'brg';
+                el_div.style.width = hasil_lebar;
+                el_div.style.height = hasil_panjang;
+                var isi_teks = document.createTextNode(i);
+                el_div.appendChild(isi_teks);
+                document.getElementById("bahan").appendChild(el_div);
+
+            }
         }
     </script>
-
-
 </body>
 
 </html>
