--- a/index.html
+++ b/index.html
@@ -10,6 +10,31 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+  <style>body {
+    background-color: grey;
+}
+
+div.bahan {
+
+    background-color: #008B8B;
+    width: 100ex;
+    height: 100ex;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+div.brg {
+    background-color: grey;
+    width: 10ex;
+    height: 10ex;
+    text-align: center;
+    /* border: solid black 0.3px; */
+    float: left;
+    outline: black solid 1px;
+
+}
+  </style>
 
   <title>ukuran custom</title>
 </head>
