memperbaiki tulisan review

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ div.brg {
         <div class="card">
           <form action="">
             <div class="card-header" style="background-color: DarkCyan ">
-              <h2 class="text-center"><b>review</b></h2>
+              <h2 class="text-center"><b>Keterangan hasil</b></h2>
             </div>
             <div class="card-body">
               <h3 id="h3"></h3>
