--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="card">
           <form action="">
             <div class="card-header" style="background-color: DarkCyan ">
-              <h2 class="text-center"><b>review</b></h2>
+              <h2 class="text-center"><b>Keterangan Hasil</b></h2>
             </div>
             <div class="card-body">
               <h3 id="h3"></h3>
