--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
         <li class="nav-item">
           <a class="nav-link " href="index.html">ukuran custom</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link " href="jilidan.html">buku jilid</a>
+        </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -122,7 +125,7 @@
         <div class="card">
           <form action="">
             <div class="card-header" style="background-color: DarkCyan ">
-              <h2 class="text-center"><b>Keterangan Hasil</b></h2>
+              <h2 class="text-center"><b>review</b></h2>
             </div>
             <div class="card-body">
               <h3 id="h3"></h3>
