sama dengan index keterangannya

--- a/program_hitung_ap260.html
+++ b/program_hitung_ap260.html
@@ -35,6 +35,9 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="index.html">ukuran Custom</a>
+        <li class="nav-item">
+            <a class="nav-link " href="jilidan.html">buku jilid</a>
+        </li>
         <a class="navbar-brand" href="index.html">
             <div class="logo-image">
                 <img src="png_benawa.png" class="img-fluid" style="width: 30%">
@@ -52,6 +55,9 @@
                 <li class="nav-item">
                     <a class="nav-link disabled" href="index.html" tabindex="-1" aria-disabled="true">ukuran
                         custom</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="jilidan.html">buku jilid</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
