--- a/program_hitung_bontak.html
+++ b/program_hitung_bontak.html
@@ -25,7 +25,7 @@
 
         }
     </style>
-    <title>ap260</title>
+    <title>stiker bontak</title>
 </head>
 
 <body>
@@ -34,7 +34,9 @@
             aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <a class="navbar-brand" href="index.html">ukuran Custom</a>
+
         <a class="navbar-brand" href="index.html">
             <div class="logo-image">
                 <img src="png_benawa.png" class="img-fluid" style="width: 30%">
@@ -52,6 +54,9 @@
                 <li class="nav-item">
                     <a class="nav-link disabled" href="index.html" tabindex="-1" aria-disabled="true">ukuran
                         custom</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="jilidan.html">buku jilid</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
