menambah d karena lupa

--- a/jilidan.html
+++ b/jilidan.html
@@ -252,7 +252,7 @@
                 } else {
 
                     hasil_akhir = 'dapat ' + hasil3 + ' lembar  ukuran ' + nm_bhn_cetak + '  (' + sisi + 'sisi)';
-                    hasil_bulat = 'akan dbulat kan menjadi ' + bulatkan + ' lembar ' + nm_bhn_cetak;
+                    hasil_bulat = 'akan dibulat kan menjadi ' + bulatkan + ' lembar ' + nm_bhn_cetak;
                     document.getElementById('hasil_bulat').innerText = hasil_bulat;
                     document.getElementById('selection').innerText = hasil_akhir;
                 }
