tambahkan link spk

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand" href="index.html">ukuran Custom</a>
+       <a class="navbar-brand" href="/spk_png/spk_png.html">SPK</a>
     <a class="navbar-brand" href="index.html">
       <div class="logo-image">
         <img src="png_benawa.png" class="img-fluid" style="width: 30%">
